Prevent border from overflowing content box

--- a/goobi-viewer-core/src/main/resources/META-INF/resources/resources/css/less/cms/templates/10_templateSearchListCustom.less
+++ b/goobi-viewer-core/src/main/resources/META-INF/resources/resources/css/less/cms/templates/10_templateSearchListCustom.less
@@ -13,7 +13,7 @@
         padding-bottom: 10px;
         border-bottom: 1px solid @middlegray;
         display: flex;
-        flex: 0 0 100%;
+        flex: 0 0 calc(100% - 30px);
     }
     &__list-image {
         overflow: hidden;
